--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
   "dependencies": {
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
-    "ejs": "^2.5.9",
     "express": "^4.16.3",
-    "express-ejs-layouts": "^2.4.0",
     "mongoose": "^5.0.17",
-    "morgan": "^1.9.0"
+    "morgan": "^1.9.0",
+    "randomstring": "^1.1.5"
   },
   "devDependencies": {},
   "scripts": {
