--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.3",
     "mongoose": "^5.0.17",
-    "morgan": "^1.9.0",
-    "randomstring": "^1.1.5"
+    "morgan": "^1.9.0"
   },
-  "devDependencies": {},
+  "devDependencies": {
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
