--- a/package.json
+++ b/package.json
@@ -1,20 +1,52 @@
 {
-  "name": "tiny_url",
+  "name": "tim-rooke-to-do-app",
   "version": "1.0.0",
-  "description": "clone of tiny url",
+  "description": "",
   "main": "index.js",
   "dependencies": {
+    "axios": "^0.18.0",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "chai": "^4.1.2",
+    "eslint": "^5.2.0",
+    "eslint-config-strongloop": "^2.1.0",
+    "eslint-plugin-react": "^7.10.0",
     "express": "^4.16.3",
-    "mongoose": "^5.0.17",
-    "morgan": "^1.9.0"
+    "mongoose": "^5.1.0",
+    "react": "^15.6.1",
+    "react-dom": "^15.6.1"
   },
   "devDependencies": {
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-plugin-transform-class-properties": "^6.24.1",
+    "babel-plugin-transform-object-rest-spread": "^6.23.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.4",
+    "enzyme": "^3.3.0",
+    "file-loader": "^0.11.2",
+    "html-webpack-plugin": "^2.29.0",
+    "jsdom": "^11.10.0",
+    "mocha": "^5.1.1",
+    "node-sass": "^4.5.3",
+    "morgan": "^1.9.0",
+    "sass-loader": "^6.0.6",
+    "sinon": "^5.0.7",
+    "style-loader": "^0.18.2",
+    "supertest": "^3.1.0",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.3.0",
+    "webpack-dev-server": "^2.5.1"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"  
+    "start": "yarn webpack-dev-server"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://timrooke1991@bitbucket.org/axis-workshops/tim-rooke-to-do-app.git"
   },
   "author": "Tim Rooke",
-  "license": "MIT"
+  "license": "MIT",
+  "homepage": "https://bitbucket.org/axis-workshops/tim-rooke-to-do-app#readme"
 }
