--- a/package.json
+++ b/package.json
@@ -3,17 +3,21 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "scripts": {
+    "build": "webpack --mode production",
+    "start": "npm run build && node index.js",
+    "client": "webpack-dev-server --mode development --devtool inline-source-map --hot",
+    "server": "nodemon index.js",
+    "dev": "concurrently \"npm run server\" \"npm run client\""
+  },
   "dependencies": {
     "axios": "^0.18.0",
     "bluebird": "^3.5.3",
     "body-parser": "^1.18.3",
-    "eslint": "^5.9.0",
-    "eslint-config-strongloop": "^2.1.0",
-    "eslint-plugin-react": "^7.11.1",
     "express": "^4.16.4",
     "mongoose": "^5.3.12",
-    "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react": "^16.7.0-alpha.2",
+    "react-dom": "^16.7.0-alpha.2"
   },
   "devDependencies": {
     "@babel/core": "^7.0.0",
@@ -24,7 +28,13 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.0",
     "clean-webpack-plugin": "^1.0.0",
+    "concurrently": "^4.0.0",
     "css-loader": "^1.0.1",
+    "eslint": "^5.9.0",
+    "eslint-config-airbnb": "^17.0.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "file-loader": "^2.0.0",
     "html-webpack-plugin": "^3.2.0",
     "morgan": "^1.9.1",
@@ -35,9 +45,6 @@
     "webpack": "^4.25.1",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^ 3.1.10"
-  },
-  "scripts": {
-    "start": "yarn webpack-dev-server"
   },
   "repository": {
     "type": "git",
